FindBugs: For performance reases, use Integer.valueOf() instead of new Integer().